# ncc

./: CMakeLists.txt
src/: IR_generator.cc  IR_generator.h  main.cpp  node.cc  node.h  parser.y  token.l
test/: basic.mag
